test/library/packages/Python/correctness/arrays/arrayErrors.2.good
$CHPL_HOME/modules/packages/Python.chpl:nnnn: In initializer:
$CHPL_HOME/modules/packages/Python.chpl:nnnn: error: Unsupported array type: imag(64)
  arrayErrors.chpl:118: called as (Array(?)).init(interpreter: borrowed Interpreter, arr: [domain(1,int(64),one)] imag(64))
